# mta-mongodb

./: .gitattributes  CMakeLists.txt  LICENSE  README.md
client/: CMakeLists.txt
client/module/: ClientSession.cpp  ClientSession.h  Main.cpp
